JEDIT 4.0 VERSION HISTORY

* Version 4.0pre8 (a.k.a 4.0 release candidate 1)

+ New Features

- Added syntax highlighting for output of Hex plugin (Andre Kaplan)
- IBM Informix 4GL syntax highlighting (Vicente Salvador)

+ Enhancements

- Documentation updates
- 'Quick HyperSearch' with a selection, and 'Quick HyperSearch for Word'
  commands will now work even if the search bar is disabled

+ Bug Fixes

- Fixed tip of the day that referred to the old S+BACK_SPACE/S+DELETE
  bindings
- Due to a typo in 4.0pre7, text areas that didn't have focus would also
  scroll to the caret location on a buffer change. This was not supposed
  to happen
- The text area will no longer scroll up and then down again on input if
  it is smaller than about six lines vertically
- Added workaround for search dialog box losing focus after 'keep
  searching' message shown
- If an error occurs while evaluating a BeanShell snippet during a
  'Replace All', the replace operation is aborted. This saves you from
  having to click through an endless stream of "BeanShell error" dialog
  boxes
- Status bar message shown while mouse was hovering over a macro menu
  item wasn't hidden after the menu item was selected
- Fixed another soft wrap bug with syntax highlighting
- Middle-mouse-drag (quick copy) failed if the selected region ended or
  began at the caret position
- Changed behavior of numeric keypad keys once again. Since some Java
  versions have a broken Toolkit.getLockingKeyState() (hence there is
  no reliable way to know of NumLock is on), they now work as follows:
  - If an action is bound to a key, the action is executed when the key
    is pressed.
  - If no action is bound, the character is inserted when the key is
    pressed.
- Cleaned up handling of changing fold handlers and 'collapsedFolds'
  property. This should fix a few obscure bugs
- Consecutive backspaces of characters would not be merged into one undo